fix extra white spaces created by css rotation

--- a/src/app/layouts/home/home.component.css
+++ b/src/app/layouts/home/home.component.css
@@ -256,7 +256,7 @@ main {
     .flip-card-container {
 
         width: 100%;
-        height: 100%;
+        height: 85%;
         position: relative;
         -o-transition: 0.4s;
         -ms-transition: 0.4s;
@@ -277,13 +277,13 @@ main {
 
     .card-front, .card-back {
 
+        left: 0;
+        width: 100%;
+        position: absolute;
         -webkit-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
         -moz-backface-visibility: hidden;
         backface-visibility: hidden;
-        position: absolute;
-        width: 100%;
-        left: 0;
     }
 
     .card-back {
